// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow to disable lazy-render 1`] = `
<transition-stub name="r-fade"
                 appear="true"
                 persisted="false"
                 css="true"
>
  <div class="r-overlay"
       style="display: none;"
  >
  </div>
</transition-stub>
`;

exports[`should render default slot correctly 1`] = `
<transition-stub name="r-fade"
                 appear="true"
                 persisted="false"
                 css="true"
>
</transition-stub>
`;
